--- a/requirements.txt
+++ b/requirements.txt
@@ -54,9 +54,9 @@ sniffio==1.3.1
 starlette==0.41.3
 surprise==0.1
 sympy==1.13.1
-torch>=2.1.0,<2.6.0
+torch==2.5.1
 torchaudio==2.5.1
-torchvision>=0.15.0,<0.16.0 
+torchvision==0.16.1
 tqdm==4.66.6
 typing_extensions==4.8.0
 tzdata==2024.2
