--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ fastapi==0.115.5
 fonttools==4.53.0
 frozenlist==1.5.0
 git-filter-repo==2.45.0
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
